@@ -6,18 +6,13 @@ import static org.awaitility.Awaitility.await;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
 import org.apache.maven.shared.invoker.MavenInvocationException;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
 
 import io.quarkus.maven.it.verifier.MavenProcessInvocationResult;
 import io.quarkus.maven.it.verifier.RunningInvoker;
@@ -25,6 +20,11 @@ import io.quarkus.test.devmode.util.DevModeClient;
 import io.quarkus.utilities.JavaBinFinder;
 
 public class RunAndCheckWithAgentMojoTestBase extends MojoTestBase {
+
+    private static final String MUTABLE_JAR_TYPE_ARG = "-Dquarkus.package.jar.type=mutable-jar";
+    private static final String LIVE_RELOAD_PWD_ARG = "-Dquarkus.live-reload.password=secret";
+    private static final String LIVE_RELOAD_URL_ARG = "-Dquarkus.live-reload.url=http://localhost:8080";
+    private static final String QUARKUS_ANALYTICS_DISABLED_TRUE = "-Dquarkus.analytics.disabled=true";
 
     protected RunningInvoker runningAgent;
     private Process runningRemote;
@@ -49,22 +49,32 @@ public class RunAndCheckWithAgentMojoTestBase extends MojoTestBase {
         }
     }
 
-    protected void runAndCheck(String... options) throws FileNotFoundException, MavenInvocationException {
+    protected void runAndCheck() throws FileNotFoundException, MavenInvocationException {
+        runAndCheckModule(null);
+    }
+
+    protected void runAndCheckModule(String module) {
         try {
             RunningInvoker running = new RunningInvoker(testDir, false);
 
             MavenProcessInvocationResult result = running
-                    .execute(Arrays.asList("package", "-DskipTests", "-Dquarkus.analytics.disabled=true"),
-                            Collections.emptyMap());
+                    .execute(
+                            List.of("package", "-DskipTests", MUTABLE_JAR_TYPE_ARG, QUARKUS_ANALYTICS_DISABLED_TRUE),
+                            Map.of());
 
             await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
             assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
             running.stop();
 
-            Path jar = testDir.toPath().toAbsolutePath()
-                    .resolve(Paths.get("target/quarkus-app/quarkus-run.jar"));
-            Assertions.assertTrue(Files.exists(jar));
-            File output = new File(testDir, "target/output.log");
+            Path runnerTargetDir = testDir.toPath().toAbsolutePath();
+            if (module != null) {
+                runnerTargetDir = runnerTargetDir.resolve(module);
+            }
+            runnerTargetDir = runnerTargetDir.resolve("target");
+
+            Path jar = runnerTargetDir.resolve("quarkus-app/quarkus-run.jar");
+            assertThat(jar).exists();
+            File output = runnerTargetDir.resolve("output.log").toFile();
             output.createNewFile();
 
             runningRemote = doLaunch(jar, output);
@@ -75,8 +85,10 @@ public class RunAndCheckWithAgentMojoTestBase extends MojoTestBase {
                     .atMost(1, TimeUnit.MINUTES).until(() -> devModeClient.getHttpResponse("/", 200));
 
             runningAgent = new RunningInvoker(agentDir, false);
-            runningAgent.execute(Arrays.asList("compile", "quarkus:remote-dev", "-Dquarkus.analytics.disabled=true"),
-                    Collections.emptyMap());
+            runningAgent.execute(
+                    List.of("compile", "quarkus:remote-dev", MUTABLE_JAR_TYPE_ARG, LIVE_RELOAD_PWD_ARG,
+                            LIVE_RELOAD_URL_ARG, QUARKUS_ANALYTICS_DISABLED_TRUE),
+                    Map.of());
 
             Thread.sleep(1000);
             await().pollDelay(100, TimeUnit.MILLISECONDS)
@@ -86,15 +98,16 @@ public class RunAndCheckWithAgentMojoTestBase extends MojoTestBase {
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
-
     }
 
     private Process doLaunch(Path jar, File output) throws IOException {
-        List<String> commands = new ArrayList<>();
-        commands.add(JavaBinFinder.findBin());
-        commands.add("-jar");
-        commands.add(jar.toString());
-        ProcessBuilder processBuilder = new ProcessBuilder(commands.toArray(new String[0]));
+        final String[] commands = {
+                JavaBinFinder.findBin(),
+                LIVE_RELOAD_PWD_ARG,
+                "-jar",
+                jar.toString()
+        };
+        ProcessBuilder processBuilder = new ProcessBuilder(commands);
         processBuilder.redirectOutput(output);
         processBuilder.redirectError(output);
         processBuilder.environment().put("QUARKUS_LAUNCH_DEVMODE", "true");
